# Irradiance

./: .gitignore  Cargo.toml  rustfmt.toml
scenes/: bvh-test.json  cbox-debug.json  cbox-dragons.json  cbox-empty.json  cbox-fancy-glass.json  cbox-fun-colors.json  cbox-glass-dragon.json  cbox-lambertian.json  cbox-obstructed-light.json  cbox-simple-geom.json  cbox-specular.json  cbox-underwater.json  cbox_lambertian.json  cbox_normals.json  constant_cbox.json  rendering-competition.json  self-intersect-test.json  wall_debug.json
src/: bbox.rs  camera.rs  color.rs  main.rs  ray.rs  renderer.rs  scene.rs
src/common/: mod.rs  sampleable.rs  wrapper.rs
src/integrators/: debug_path_tracer.rs  direct_light.rs  integrator.rs  material_path_tracer.rs  mixture_path_tracer.rs  mod.rs  normal_integrator.rs  path_tracer_mats.rs  simple_path_tracer.rs
src/light/: color.rs
src/lights/: diffuse_light.rs  light.rs  mod.rs  null_light.rs
src/materials/: blend.rs  dieletric.rs  diffuse_light.rs  lambertian.rs  material.rs  mirror.rs  mod.rs  null_material.rs  perfect_mirror.rs
src/math/: bbox.rs  bounding_box.rs  common.rs  intersection.rs  mod.rs  phantom.rs  ray.rs  real.rs  space.rs  transform.rs  vector.rs
src/raytracing/: intersection.rs  mod.rs  ray.rs  termination.rs
src/samplers/: independent.rs  mod.rs  sampler.rs  sampling.rs
src/sampling/: independent.rs  mod.rs  random_variable.rs  sampler.rs
src/spectrum/: color.rs
src/surface_groups/: bvh.rs  mod.rs  surface_group.rs  surface_list.rs
src/surfaces/: bvh.rs  emission.rs  hit_info.rs  mesh.rs  mod.rs  (+6 more)
(+27 files in other folders)
