[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
image = "0.24.6"
lazy_static = "1.4.0"
nalgebra = "0.32.2"
serde = "1.0.159"
serde_derive = "1.0.159"
serde_json = "1.0.95"
typetag = "0.2.7"
