[package]
name = "pbr-project"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
derive_more = "0.99.17"
image = "0.24.6"
indicatif = "0.17.3"
nalgebra = "0.32.2"
rand = "0.8.5"
serde = "1.0.159"
serde_derive = "1.0.159"
serde_json = "1.0.95"
typetag = "0.2.7"
